--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Ignore generated chart or alignment outputs
+output/*.png
+output/*.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
